# j3-graphql

./: .dockerignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  deploy.env
docker/server-gql/: Dockerfile  docker-compose.yml  entrypoint.sh
docker/tester-gql/: Dockerfile  docker-compose.yml  docker-compose.yml.1
docstore-adapter-1ry-gql/: Cargo.toml
docstore-adapter-1ry-gql/src/: api.rs
docstore-adapter-2ry-pg/: Cargo.toml
docstore-adapter-2ry-pg/src/: lib.rs  remote.rs  storage.rs
docstore-adapter-2ry-pg/src/utils/: docker.rs
docstore-client-gql/: Cargo.toml
docstore-client-gql/graphql/: add_document.gql  add_owner.gql  get_document.gql  list_documents.gql  list_owners.gql  schema.gql  schema.json
docstore-client-gql/src/: api.rs  lib.rs
docstore-domain/: Cargo.toml
docstore-domain/src/model/: document.rs  error.rs
docstore-domain/src/ports/primary/: session.rs  storage.rs
docstore-domain/src/ports/secondary/: remote.rs  storage.rs
docstore-server-gql/: Cargo.toml
docstore-server-gql/config/docker/: default.toml  local.toml
docstore-server-gql/config/gql/: default.toml
docstore-server-gql/config/postgresql/: default.toml
docstore-server-gql/docker/: Dockerfile  Dockerfile-e2e  docker-compose.yml
docstore-server-gql/src/: main.rs  server.rs  settings.rs
docstore-server-gql/src/utils/: config.rs
features/: acceptance.feature
tests/: e2e.rs
tests/common/: document.rs  error.rs  mod.rs  state.rs
