[package]
name = "docstore-adapter-1ry-gql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
async-graphql = { version = "3.0.20", features = [ "tracing", "uuid" ] }
futures = { version = "0.3.18", optional = true }
http = "0.2"
docstore-domain = { path = "../docstore-domain" }
chrono = { version = "0.4", features = [ "serde" ] }
reqwest = "0.11.8"
serde_json = "1"
serde = {version = "=1.0.130", features = ["derive"] }
snafu = { version = "0.6.10", features = [ "futures" ] }
sqlx = { version = "0.5.9", default-features = false, features = [ "postgres", "runtime-tokio-native-tls", "chrono", "uuid" ], optional = true }
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.26"
tracing-futures = "0.2.5"
url = { version = "2.2", features = [ "serde" ] }
uuid = { version = "0.8", features = ["serde", "v4"] }
