[package]
name = "docstore-adapter-1ry-gql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["graphql"]
graphql = ["async-graphql"]

[dependencies]
async-trait = "0.1.50"
async-graphql = { version = "3.0.20", features = [ "tracing", "uuid", "chrono" ], optional = true }
futures = { version = "0.3.18", optional = true }
http = "0.2"
docstore-domain = { path = "../docstore-domain" }
chrono = { version = "0.4", features = [ "serde" ] }
reqwest = "0.11.8"
serde_json = "1"
serde = {version = "=1.0.130", features = ["derive"] }
snafu = { version = "0.6.10", features = [ "futures" ] }
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-attributes = "0.1"
url = { version = "2.2", features = [ "serde" ] }
# TODO make the following option wasm-bindgen optional
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }
