[package]
name = "docstore-adapter-1ry-gql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["graphql"]
graphql = ["async-graphql"]

[dependencies]
# TODO make the following option wasm-bindgen optional
async-graphql = { version = "3.0.38", features = [ "tracing", "uuid", "chrono" ], optional = true }
async-trait = "0.1.56"
chrono = { version = "0.4", features = [ "serde" ] }
docstore-domain = { path = "../docstore-domain" }
futures = { version = "0.3.18", optional = true }
http = "0.2"
reqwest = "0.11.8"
serde = {version = "=1.0.130", features = ["derive"] }
serde_json = "1"
snafu = { version = "0.7.1", features = [ "futures" ] }
tokio = { version = "1.19.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-attributes = "0.1"
tracing-futures = "0.2"
url = { version = "2.2.2", features = [ "serde" ] }
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }
