[package]
name = "docstore-adapter-2ry-pg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
bollard = { version = "0.11.0" }
chrono = { version = "0.4", features = [ "serde" ] }
config = { version = "0.11", default_features = false, features = ["json", "toml"] }
docstore-domain = { path = "../docstore-domain" }
futures = { version = "0.3.18" }
semver = { version = "1.0.0" }
serde = {version = "=1.0.130", features = ["derive"] }
serde_json = "1"
snafu = { version = "0.7.1", features = [ "futures" ] }
sqlx = { version = "0.5.9", default-features = false, features = [ "postgres", "runtime-tokio-native-tls", "chrono", "uuid", "macros" ] }
tokio = { version = "1.19.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-attributes = "0.1"
url = { version = "2.2.2", features = [ "serde" ] }
uuid = { version = "0.8", features = ["serde", "v4"] }
