[package]
name = "docstore-client-gql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = { version = "0.10", features = [ "reqwest" ] }
http = "0.2"
mockall = "0.8.3"
docstore-adapter-1ry-gql = { path = "../docstore-adapter-1ry-gql" }
reqwest = "0.11.8"
serde_json = "1"
serde = {version = "=1.0.130", features = ["derive"] }
snafu = { version = "0.6.10", features = [ "futures" ] }
tracing = "0.1.26"
tracing-futures = "0.2.5"
url = { version = "2.2", features = [ "serde" ] }
uuid = { version = "0.8", features = ["serde", "v4"] }

