[package]
name = "docstore-client-gql"
version = "0.1.0"
edition = "2021"

[dependencies]
graphql_client = { version = "0.10", features = [ "reqwest" ] }
chrono = "0.4"
http = "0.2"
mockall = "0.8.3"
docstore-adapter-1ry-gql = { path = "../docstore-adapter-1ry-gql", default-features = false }
reqwest = "0.11.8"
serde_json = "1"
serde = {version = "=1.0.130", features = ["derive"] }
snafu = { version = "0.6.10", features = [ "futures" ] }
tracing = "0.1.26"
tracing-futures = "0.2.5"
url = { version = "2.2", features = [ "serde" ] }
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen" ] }

