[package]
name = "docstore-domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
chrono = { version = "0.4", features = [ "serde" ] }
mockall = "0.8.3"
serde = {version = "=1.0.130", features = ["derive"] }
snafu = { version = "0.7.1", features = [ "futures" ] }
uuid = { version = "0.8", features = ["serde", "v4"] }
