[package]
name = "docstore-server-gql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Include nothing by default
default = ["postgres"]

# Enable everything
full = [
  "postgres",
]

postgres = [ "bollard", "futures", "semver", "sqlx", "url" ]

[dependencies]
async-trait = "0.1.50"
async-graphql = { version = "3.0.20", features = [ "tracing", "uuid", "chrono" ] }
async-graphql-warp = { version = "3.0.20" }
bollard = { version = "0.11.0", optional = true }
clap = { version = "3.0.5", features = ["derive"] }
config = { version = "0.11", default_features = false, features = ["json", "toml"] }
futures = { version = "0.3.18", optional = true }
http = "0.2"
mockall = "0.8.3"
docstore-adapter-1ry-gql = { path = "../docstore-adapter-1ry-gql" }
docstore-adapter-2ry-pg = { path = "../docstore-adapter-2ry-pg" }
docstore-domain = { path = "../docstore-domain" }
opentelemetry = { version = "0.17", default-features = false, features = ["trace"] }
opentelemetry-jaeger = "0.16"
reqwest = "0.11.8"
semver = { version = "1.0.0", optional = true }
serde_json = "1"
serde = {version = "=1.0.130", features = ["derive"] }
snafu = { version = "0.6.10", features = [ "futures" ] }
sqlx = { version = "0.5.9", default-features = false, features = [ "postgres", "runtime-tokio-native-tls", "chrono", "uuid" ], optional = true }
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-attributes = "0.1"
tracing-opentelemetry = "0.17.1"
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = [ "json", "env-filter" ] }
url = { version = "2.2", features = [ "serde" ], optional = true }
uuid = { version = "0.8", features = ["serde", "v4"] }
warp = { version = "0.3.1" }

[[bin]]
name = "gql"
path = "src/main.rs"

